tests/assembler/pass/test14.ial
function void foo()
{
    block entry
    {
        jump (other);
    }

    block other
    {
    }
}
