tests/assembler/fail/test14.ial
type BadFuncPtr
{
    field stdcall void() foo;
}
